=======
HISTORY
=======

1.2.7 (unreleased)
------------------

- pep8
  [iElectric]

- Ported tests from doctests to unittests
  [iElectric]

- Add hook to JSONDetails to allow subclasses to supplement or override the results
  [anthonygerrard]


1.2.6 (2011-05-12)
------------------
- Changed the color of the background on the external editor to light gray to make the buttons more visible.
  [davidjonas]


1.2.5 (2011-05-12)
------------------

- Add a CSS class to the `Edit without visual editor` note.
  [hannosch]

- Avoid determining content type as text/plain on Dexterity add views.
  [davisagli]

- In the link "Edit without visual editor", append existing url-parameters.
  Fixes https://dev.plone.org/plone/ticket/11632
  [WouterVH]


1.2.4 (2011-03-22)
------------------

- Use uuidFor(obj) from plone.outputfilters instead of obj.UID() for
  plone.uuid compatibility.
  [elro]

- Internationalization fixes.
  [thomasdesvenain]

- Allows to use tinymce wysiwyg support outside of an Archetypes context.
  (Checks 'force_wysiwyg' variable value to check if wysiwyg support is enabled.)
  [thomasdesvenain]

- Don't acquire when determining the mimetype of the field being edited.
  [davisagli]

- Fixed bug when rendering for anonymous users.
  [elro]

- Remove isTinyMCEEnabled in kssregistry. Refs #11248
  [jaroel]

- Fixed #11597 TinyMCE Right Pane Depends on Center Pane.
  [Brainix]


1.2.3 (2011-02-24)
------------------

- Suppress the WYSIWYG editor for fields whose text format is not HTML, and
  provide a "Edit without visual editor" link like kupu did so that the format
  can be switched from HTML to something else.
  [davisagli]

- Fix wysiwyg_support to correctly respect a user's preference to use no
  wysiwyg editor.
  [davisagli]

- Correctly load image dialog for existing images using the @@images view for
  image scales.
  [davisagli]

- Updated Norwegian translations.
  [mj]

1.2.2 (2011-02-10)
------------------

- Use @@images view for image scales.